Quia accusamus rerum veritatis vel molestias et et. Illum nobis qui dolorem. Reiciendis et hic voluptas id rerum. Qui voluptas et velit voluptate. Nihil ut amet architecto quas doloribus aut officia.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version:#"3"
 services:
   solid-server:
     build: .
@@ -8,3 +8,4 @@ services:
     entrypoint: npm run solid start -- --no-reject-unauthorized
     environment:
       - NODE_TLS_REJECT_UNAUTHORIZED=0
+ 
