--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version:#"3"
 services:
-  solid-server:
+! solid-server:
     build: .
     container_name: solid
     ports:
@@ -8,4 +8,4 @@ services:
     entrypoint: npm run solid start -- --no-reject-unauthorized
     environment:
       - NODE_TLS_REJECT_UNAUTHORIZED=0
- 
+  
